--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,7 @@
 title: Jacob Langeloh - CV and Info
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Personal webpage for Jacob Langeloh
 
 domain: Jlangeloh.github.io       # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
 url: https://jlangeloh.github.io  # the base hostname and protocol for your site, e.g. http://example.com
@@ -38,6 +36,11 @@ theme: minima
 plugins:
   - jekyll-feed
 
+header_pages:
+ - research.md
+ - cv.md
+ - about.md
+ 
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
