--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,9 @@ baseurl: /      # place folder name if the site is served in a subfolder
 # baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: LangelohJ
+mastodon:
+- username: jlangeloh
+  instance: zirk.us
 github_username:  jlangeloh
 
 # Build settings
